--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
-    "require": {
-        "phpmailer/phpmailer": "^6.7",
-        "filp/whoops": "^2.14",
-        "bramus/router": "^1.6"
+  "name": "becode/hackers",
+  "autoload": {
+    "psr-4": {
+      "App\\": "./"
     }
+  },
+  "require": {
+    "phpmailer/phpmailer": "^6.7",
+    "filp/whoops": "^2.14",
+    "bramus/router": "^1.6",
+    "ext-pdo": "*"
+  }
 }
