--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "phpmailer/phpmailer": "^6.7",
     "filp/whoops": "^2.14",
     "bramus/router": "^1.6",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "vlucas/phpdotenv": "^5.5"
   }
 }
